fix(chatting): exclude sender from long polling notification to prevent duplicate message rendering (#126)